Migrate to TypeScript build
Add a TypeScript build setup and move front-end artifacts into a dist output. Added package.json and tsconfig.json to enable tsc builds and added src/*.ts sources (avatar.ts, banner.ts). Removed legacy scripts/avatar.js and converted banner.js → src/banner.ts with TypeScript typings and small refactors (better DOM typing, helper ignore, promises, and minor logic/formatting improvements). Renamed many runtime JS files from scripts/ → dist/ and updated HTML files (index, about, blog, chat, reader, termtest) to load from ./dist. Updated .gitignore to include dependencies, public/build folders and legacy entries. These changes prepare the repo for compiling TypeScript into dist and ensure pages reference the built output.

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,18 @@
-# Ignore darkStyles.css (since it's now merged into styles.css)
-darkStyles.css
-
-# Ignore common OS-generated files
+# OS-generated files
 .DS_Store
 Thumbs.db
 
-# Ignore node_modules (if using Node.js)
-node_modules/
-
-# Ignore logs and temp files
+# Logs / temp
 *.log
 *.tmp
 
-# Ignore build artifacts (if applicable)
-dist/
+# Dependencies
+node_modules/
+
+# Legacy / archival
+deprecated/
+
+# Generated build folders
+#dist/
+public/
 build/
