Move to TypeScript sources; remove dist builds
Replace checked-in distribution artifacts with TypeScript source files. Added a jsconfig.json and many new src/*.ts modules, removed numerous dist/*.js build files, and renamed dist/main.json to data/main.json. Updated .gitignore to ignore the dist folder and adjusted tsconfig.json. This change prepares the repo to build from the TypeScript sources instead of storing generated bundles in version control.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "moduleResolution": "Bundler",
         "lib": [
             "ES2022",
-            "DOM"
+            "DOM",
+            "DOM.Iterable"
         ],
         "strict": true,
         "noEmitOnError": true,
@@ -15,5 +16,7 @@
         "removeComments": false,
         "verbatimModuleSyntax": true
     },
-    "include": ["src"]
+    "include": [
+        "src"
+    ]
 }
