--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
         "rootDir": "src",
         "sourceMap": false,
         "removeComments": false,
-        "verbatimModuleSyntax": true
+        "verbatimModuleSyntax": true,
+        "rewriteRelativeImportExtensions": true,
+        "allowImportingTsExtensions": true
     },
     "include": [
         "src"
