Add physics effects and refactor MediaStyler
Introduce a physics runtime and SMS enter-bounce effect, and refactor media styling into a MediaStyler class.

- Add src/physics.ts: implements a physics runtime, an smsEnterBounce decorator, utilities to patch SMS HTML, and runtime helpers (IntersectionObserver/MutationObserver). Ensures required CSS and runtime are installed and provides patching logic for SMS animations.
- Add styles/physics.css: default CSS variables and keyframes for the SMS enter bounce animation.
- Refactor src/mediaStyler.ts: convert many exported functions into internal impls (replace*Impl / bind*Impl), add strong typing, and expose a MediaStyler class that delegates to injectable implementations. replaceSmsMessages is decorated to apply the smsEnterBounce effect; bindEmailActions and other helpers are adapted accordingly. Also tidyups (use switch for node types, minor formatting).
- Update src/reader.ts to instantiate and use MediaStyler (mediaStyler.replaceEmails/replaceSmsMessages/replaceSVGs/replaceTooltips and mediaStyler.bindEmailActions) instead of importing functions directly.
- Update tsconfig.json to explicitly set "experimentalDecorators": false.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
         "removeComments": false,
         "verbatimModuleSyntax": true,
         "rewriteRelativeImportExtensions": true,
-        "allowImportingTsExtensions": true
+        "allowImportingTsExtensions": true,
+        "experimentalDecorators": false
     },
     "include": [
         "src"
