--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
         "build": "tsc -p tsconfig.json"
     },
     "devDependencies": {
+        "@types/node": "^25.2.3",
         "typescript": "^5.9.3"
+    },
+    "dependencies": {
+        "process": "^0.11.10"
     }
 }
